bppackaging/src/objects/Transaction_Type__c.object
<CustomObject>
    <description>Object used in SO related functionlaity</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>A unique identifier for the transaction type. Typical values would be “Customer Pay”, “Warranty”, “Insurance”, “Internal”.  Users would be able to define as many different variations of each that they may require.</description>
        <label>Code</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Only required when Type=Internal.  This is the category that will be used to select the GL account to expense the service section against once it’s completed.</description>
        <label>Internal Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Transaction Types (Internal Category)</relationshipLabel>
        <relationshipName>Transaction_Types3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Labour_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The labour category to use for the accounting entries generated by the section related to labour line items.</description>
        <label>Labour Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Transaction Types (Labour Category)</relationshipLabel>
        <relationshipName>Transaction_Types2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The part category to use for the accounting entries generated by the section related to part line items.  This will override the category assigned to the part records.</description>
        <label>Part Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Transaction Types</relationshipLabel>
        <relationshipName>Transaction_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sublet_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sublet Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Transaction Types (Sublet Category)</relationshipLabel>
        <relationshipName>Transaction_Types1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Third_Party_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Only required when Type=Third-Party.  This is the customer who will be billed for the service section instead of the customer assigned to the customer order.</description>
        <label>Third Party Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Is_Customer__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction Types</relationshipLabel>
        <relationshipName>Transaction_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This is what controls the behavior of a service section and who is being billed for the service work.  There are only three possible settings for this</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Transaction Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TTN-{00000000}</displayFormat>
        <label>Transaction Type Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>